<resources>
    <string name="app_name">Meme Smash</string>
    <string name="login">Login</string>
    <string name="sign_up">Retister new user</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="confirm_password">Confirm Password: </string>
    <string name="resend">Resend Email</string>
    <string name="close">Close</string>
    <string name="register_with_email">Register with an email address</string>
    <string name="register_with_google">Register with a Google account</string>
    <string name="register_with_facebook">Register with a Facebook account</string>
    <string name="facebook_app_id">445458542559212</string>
    <string name="fb_login_protocol_scheme">fb445458542559212</string>
    <string name="anonymous_greeting">You are not logged in - tap here to signin/register</string>
    <string name="report_this_meme">Report this meme...</string>
    <string name="create_a_meme">Click here to create a meme!</string>
    <string name="my_memes">View Your Memes</string>
    <string name="favorite_memes">View Your Favorite Memes</string>
    <string name="change_name">Change Your Display Name...</string>
    <string name="enter_new_name">Enter your new username: </string>
    <string name="confirm_new_name">Confirm your new username: </string>
    <string name="logout">Logout...</string>
    <string name="top_memes">See the top memes!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_picker">LoginPickerActivity</string>
</resources>
